# CF1-Claude

./: .gitignore  CF1_Dark_Mode_Session_Summary.md  CF1_UI_Color_Changes_Session_Backup.md  CLAUDE.md  cleanup_duplicates.sh
CF1 Claude/: CF1_TESTING_INFRASTRUCTURE_SESSION_MEMORY.md  (+5 more)
CF1 Claude/CF1 Code/cf1-core/: Cargo.toml  DEPLOYMENT_READY.md  GAS_OPTIMIZATION.md  README.md  SECURITY.md  SECURITY_ENHANCEMENTS.md  TOKEN_MINTING_UPDATE.md  build.rs  deployment-simulation.json
CF1 Claude/CF1 Code/cf1-core/.cargo/: config.toml
CF1 Claude/CF1 Code/cf1-core/artifacts/: cf1_core.wasm
CF1 Claude/CF1 Code/cf1-core/contracts/launchpad/: compliance.rs  error.rs  gas_optimization.rs  governance.rs  helpers.rs  integration_tests.rs  lib.rs  lockup.rs  msg.rs  rate_limit.rs  security.rs  state.rs  tests.rs
CF1 Claude/CF1 Code/cf1-core/examples/: schema.rs
CF1 Claude/CF1 Code/cf1-core/schema/: cf1-core.json  launchpad_schema.json
CF1 Claude/CF1 Code/cf1-core/schema/raw/: execute.json  instantiate.json  query.json  response_to_all_proposals.json  response_to_config.json  response_to_creator.json  response_to_creator_stats.json  response_to_investment.json  response_to_investments_by_proposal.json  response_to_platform_stats.json  response_to_proposal.json
CF1 Claude/CF1 Code/cf1-core/scripts/: build.sh  deploy.sh  test-deployment.sh  test.sh
CF1 Claude/CF1 Code/cf1-core/src/: compliance.rs  error.rs  gas_optimization.rs  governance.rs  helpers.rs  integration_tests.rs  lib.rs  lockup.rs  msg.rs  rate_limit.rs  security.rs  state.rs  tests.rs
(+652 files in other folders)
